# leocore_firmware_ros2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  STM32F401RCTx_FLASH.ld  STM32F401XX_FLASH.ld  flake.nix  leocore.ioc  platformio.ini  stm32pio.ini
.github/workflows/: ci.yml
App/Inc/app/: configuration.hpp  hal_compat.hpp  imu_receiver.hpp  microros_allocators.hpp  motor_controller.hpp  parameters.hpp
App/Src/: app.cpp  imu_receiver.cpp  microros_allocators.cpp  motor_controller.cpp  parameters.cpp  rand.cpp
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
Drivers/icm42605/: ICM42605.cpp
Inc/: main.h  mainf.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Inc/firmware/: configuration.hpp  hal_compat.hpp  microros_allocators.hpp  motor_controller.hpp  parameters.hpp
Inc/microros/: uart_transport.h
Lib/icm42605/: ICM42605.hpp
Micro-ROS/: extra_packages.repos
Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
Src/firmware/: imu_reveiver.cpp  mainf.cpp  microros_allocators.cpp  motor_controller.cpp  parameters.cpp
Src/microros/: clock.c  uart_transport.c
cmake/: firmware_version.cmake  gcc-arm-none-eabi.cmake  utils.cmake
cmake/stm32cubemx/: CMakeLists.txt
extra_packages/: extra_packages.repos
scripts/: firmware_version.py  linker-hardfp.py
